// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`relaxngToJsonSchema correctly converts example 1 1`] = `
Object {
  "items": Object {
    "properties": Object {
      "email": Object {
        "title": "Email",
        "type": "string",
      },
      "name": Object {
        "title": "Name",
        "type": "string",
      },
    },
    "title": "Card",
    "type": "object",
  },
  "title": "Address book",
  "type": "array",
}
`;

exports[`relaxngToJsonSchema correctly converts example 2 1`] = `
Object {
  "items": Object {
    "properties": Object {
      "email": Object {
        "title": "Email",
        "type": "string",
      },
      "name": Object {
        "title": "Name",
        "type": "string",
      },
    },
    "title": "Card",
    "type": "object",
  },
  "minItems": 1,
  "title": "Address book",
  "type": "array",
}
`;

exports[`relaxngToJsonSchema correctly converts example 3 1`] = `
Object {
  "items": Object {
    "properties": Object {
      "email": Object {
        "title": "Email",
        "type": "string",
      },
      "name": Object {
        "title": "Name",
        "type": "string",
      },
      "note": Object {
        "title": "Note",
        "type": "string",
      },
    },
    "title": "Card",
    "type": "object",
  },
  "title": "Address book",
  "type": "array",
}
`;

exports[`relaxngToJsonSchema correctly converts example 4 1`] = `
Object {
  "items": Object {
    "properties": Object {
      "email": Object {
        "title": "Email",
        "type": "string",
      },
      "noName16": Object {
        "oneOf": Array [
          Object {
            "title": "Name",
            "type": "string",
          },
          Object {
            "properties": Object {
              "familyName": Object {
                "title": "Family name",
                "type": "string",
              },
              "givenName": Object {
                "title": "Given name",
                "type": "string",
              },
            },
            "title": undefined,
            "type": "object",
          },
        ],
        "title": undefined,
      },
      "note": Object {
        "title": "Note",
        "type": "string",
      },
    },
    "title": "Card",
    "type": "object",
  },
  "title": "Address book",
  "type": "array",
}
`;

exports[`relaxngToJsonSchema correctly converts example 5 1`] = `
Object {
  "items": Object {
    "properties": Object {
      "email": Object {
        "title": "Email",
        "type": "string",
      },
      "name": Object {
        "title": "Name",
        "type": "string",
      },
    },
    "title": "Card",
    "type": "object",
  },
  "title": "Address book",
  "type": "array",
}
`;

exports[`relaxngToJsonSchema correctly converts example 6 1`] = `
Object {
  "items": Object {
    "properties": Object {
      "Email": Object {
        "title": "Email",
        "type": "string",
      },
      "Name": Object {
        "title": "Name",
        "type": "string",
      },
    },
    "title": "Card",
    "type": "object",
  },
  "title": undefined,
  "type": "array",
}
`;

exports[`relaxngToJsonSchema correctly converts example 7 1`] = `
Object {
  "oneOf": Array [
    Object {
      "title": "Age",
      "type": "string",
    },
    Object {
      "title": "Age 2",
      "type": "string",
    },
  ],
  "title": undefined,
}
`;
